<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPage">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/SearchCountryInfo"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <AutoCompleteTextView
            android:id="@+id/country"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:hint="@string/SelectCountry"
            android:background="#FFFFFF"/>

        <Button
            android:id="@+id/btnSearchCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Search"
            android:textColor="#FFFFFF"/>
    </LinearLayout>


</TableLayout>
